feat: padronizar contratos e integrações (#240)
Resolve conflitos com a main, preserva contratos compartilhados, API pública protegida, eventos versionados, EDI auditável e integrações operacionais existentes.